@@ -315,7 +315,9 @@ uint8_t VGA_ReadCRTC(uint8_t index);
 uint8_t VGA_ReadGDC(uint8_t index);
 uint8_t VGA_ReadSequencer(uint8_t index);
 uint8_t VGA_ReadAttribute(uint8_t index);
+uint8_t VGA_ReadGraphics(uint8_t index);
 void VGA_WriteCRTC(uint8_t index, uint8_t value);
 void VGA_WriteGDC(uint8_t index, uint8_t value);
 void VGA_WriteSequencer(uint8_t index, uint8_t value);
 void VGA_WriteAttribute(uint8_t index, uint8_t value);
+void VGA_WriteGraphics(uint8_t index, uint8_t value);
